// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton/CheckPresenter/CheckPresenter renders with all props 1`] = `
<span
  className="hig__radio-button__wrapper hig__radio-button__wrapper--checked hig__radio-button__wrapper--disabled"
>
  <span
    className="hig__radio-button__wrapper__button"
  />
  <span
    className="hig__radio-button__wrapper__button--indeterminate"
  />
  <span
    className="hig__radio-button__wrapper__button--disabled"
  />
</span>
`;

exports[`RadioButton/CheckPresenter/CheckPresenter renders without props 1`] = `
<span
  className="hig__radio-button__wrapper"
>
  <span
    className="hig__radio-button__wrapper__button"
  />
  <span
    className="hig__radio-button__wrapper__button--indeterminate"
  />
  <span
    className="hig__radio-button__wrapper__button--disabled"
  />
</span>
`;
